# SmartVA-Analyze

./: .coveragerc  .gitattributes  .gitignore  .hgignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  build_script.bat  build_script.sh  conda-environment-linux.yml  dependencies.txt  dev_notes.txt  matplotlibrc  pyproject.toml  pytest.ini  readme.txt  requirements-conda-pip.txt  requirements-conda.txt  requirements-dev.txt  requirements-win.txt  requirements.txt  setup.py  smartva-mac.spec  smartva-win-cli.spec  smartva-win.spec  smartva.yaml
docs/: changelog_v1.2.1.md  changelog_v1.2.md  changelog_v2.0.md  changelog_v2.1.md  changelog_v2.2.md
pkg/: DataEntryForm.xlsx  icon.icns  run-pyinstaller.sh  smartva-Windows.spec  smartva-linux-cli.spec  smartva-mac.spec  smartva-macOS.spec  smartva-win-cli.spec  smartva-win-gma.spec  smartva-win.spec  smartva.xml  smartva.xml.backup
res/: help.html
smartva/: __init__.py  __main__.py  adult_cause_names.csv  adult_pre_symptom_data.py  adult_pre_symptom_prep.py  adult_symptom_data.py  adult_symptom_prep.py  adult_tariff.py  adult_tariff_data.py  adultpresymptom.py  adultsymptom.py  adulttariff.py  adultuniformtrain.py  answer_ranges.py  cause_grapher.py  causegrapher.py  child_cause_names.csv  child_pre_symptom_data.py  child_pre_symptom_prep.py  child_symptom_data.py  child_symptom_prep.py  child_tariff.py  child_tariff_data.py  childpresymptom.py  childsymptom.py  childtariff.py  childuniformtrain.py  cleanheaders.csv  common_data.py  common_prep.py  config.py  conversion_utils.py  countries.py  csmf_grapher.py  csmfgrapher.py  data_prep.py  default_fill_data.py  (+42 more)
(+297 files in other folders)
