[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartva"
authors = [
    {name = "Abraham Flaxman", email = "abie@uw.edu"},
]
maintainers = [
    {name = "Abraham Flaxman", email = "abie@uw.edu"},
]
description = "SmartVA-Analyze Desktop Application"
readme = "README.rst"
# dynamic = ["version"]
version = "3.0.0"
dependencies = [
# put in things required to run the package from smartva.yaml, with versions
    "click",
    "colorama",
    "matplotlib",
    "numpy",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "tornado",
    "progressbar",
    "xlsxwriter",
    "wxpython",
    "pandas",
    "stemming"
]
requires-python = ">=3.10"
keywords = ["verbal-autopsy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
test = ["coverage", "pre-commit", "pytest", "pytest-cov"]
doc = ["matplotlib", "pypandoc", "sphinx"]
dev = ["smartva[test,doc]"]

[project.urls]
Repository = "https://github.com/ihmeuw/SmartVA-Analyze"
Documentation = "https://www.healthdata.org/data-tools-practices/verbal-autopsy"

[tool.pytest.ini_options]
markers = "data_checks: Mark tests as requiring the --data-checks option to run."
